fixed wrapping

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -524,7 +524,7 @@ code{
 		width: 100%;
 		height: 75vh;
 	}
-	.row{width: 120%;overflow: hidden;}
+	.row{width: 120%;overflow: hidden;flex-wrap: nowrap;}
 	.biodiversity-map{height: 75vh;width: 32.5vw;border:1px dashed #1E5430;}
 	.biodiversity-chart{height: 75vh;width: 32.5vw;border:1px dashed #1E5430;}
 }
